--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.3.1
 astroid==2.4.2
 autopep8==1.5.4
 colorama==0.4.4
+dj-database-url==0.5.0
 Django==3.0.5
+django-heroku==0.3.1
 djongo==1.3.3
 gunicorn==20.0.4
 isort==5.7.0
@@ -11,6 +13,7 @@ mccabe==0.6.1
 mypy==0.790
 mypy-extensions==0.4.3
 Pillow==8.1.0
+psycopg2==2.8.6
 pycodestyle==2.6.0
 pylint==2.6.0
 pylint-django==2.3.0
@@ -22,4 +25,5 @@ sqlparse==0.2.4
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+whitenoise==5.2.0
 wrapt==1.12.1
